added some more shit. Going to have to definitely clean all this fuck ass up its shit code ngl.